# BlazingWebP

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  vite.config.js
resources/: icon.psd
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: Icon_1024.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
src/store/: store.ts
src/types/: types.ts
