[package]
name = "BlazingWebP"
version = "0.4.0"
description = "Your blazingly fast WebPbatch converter."
authors = ["Pierre Pichot"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blazingwebp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tauri-plugin-dialog = "2.3.3"
tauri-plugin-fs = "2.4.2"
rayon = "1.11.0"
webp = "0.3.0"
fast_image_resize = { version = "5.2.1", features = ["image"] }
image = "0.25.6"
anyhow = "1.0.99"
